--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>USA 2200 | United Simulator of America</title>
 <meta name="description" content="A retro simulation of an America where every state is battling for control of the nation">
-<link rel="stylesheet" href="/style.09b664b3.css">
+<link rel="stylesheet" href="/style.css">
 <link href="https://fonts.googleapis.com/css2?family=VT323&amp;display=swap" rel="stylesheet">
 <meta name="theme-color" content="#000000">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.9cadf159.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
 <meta property="og:title" content="USA 2200">
 <meta property="og:description" content="A retro simulation of an America where every state is battling for control of the nation">
-<meta property="og:image" content="/og-image.5ca347b8.png">
+<meta property="og:image" content="/og-image.png">
 <meta property="og:image:height" content="1152">
 <meta property="og:image:width" content="2200">
 <meta property="og:locale" content="en_US">
@@ -18,10 +18,10 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="USA 2200">
 <meta name="twitter:description" content="A retro simulation of an America where every state is battling for control of the nation">
-<meta name="twitter:image" content="/og-image.5ca347b8.png">
+<meta name="twitter:image" content="/og-image.png">
 <meta name="twitter:creator" content="@bennettfeely">
 <meta itemprop="name" content="USA 2200">
-<meta itemprop="image" content="/og-image.5ca347b8.png">
+<meta itemprop="image" content="/og-image.png">
 <meta name="description" itemprop="description" content="A retro simulation of an America where every state is battling for control of the nation">
 </head>
 
