--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>USA 2200 | United Simulator of America</title>
 <meta name="description" content="A retro simulation of an America where every state is battling for control of the nation">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.scss">
 <link href="https://fonts.googleapis.com/css2?family=VT323&amp;display=swap" rel="stylesheet">
 <meta name="theme-color" content="#000000">
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
